# dirstat-core

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  cbindgen.toml  deferrals.md  dirstat-core-Spec.md
.github/workflows/: ci.yml
include/: dirstat_core.h
src/: classify.rs  ffi.rs  format.rs  lib.rs  log.rs  scan.rs  tree.rs  treemap.rs
tests/: engine.rs  ffi.rs  fuzz.rs  pathological.rs  property.rs  stress.rs
